# epivizFileParser

./: .coveragerc  .gitignore  AUTHORS.rst  CHANGELOG.rst  LICENSE.txt  README.rst  requirements.txt  setup.cfg  setup.py
.github/workflows/: python-app.yml
docs/: Makefile  conf.py  index.rst  installation.rst  requirements.txt  usage.rst
skeleton/: skeleton.py
src/efs_parser/: BamFile.py  BaseFile.py  BigBed.py  BigWig.py  Helper.py  S3HDF5File.py  TileDB.py  TileDBTbxFile.py  TranscriptTbxFile.py  utils.py
src/epivizFileParser/: BamFile.py  BaseFile.py  BigBed.py  BigWig.py  GWASBigBedPIP.py  GWASBigBedPval.py  GtfFile.py  GtfParsedFile.py  GtfTabixFile.py  GuideBigBed.py  GuideTbxFile.py  HDF5File.py  Helper.py  InteractionBigBed.py  ReadingsBamFile.py  S3HDF5File.py  SamFile.py  SplicingBamFile.py  TbxFile.py  TileDB.py  TileDBTbxFile.py  TranscriptTbxFile.py  __init__.py  sceTileDB.py  utils.py
src/parser/: BaseFile.py  BigWig.py  SamFile.py  TbxFile.py  TileDB.py  TileDBTbxFile.py  skeleton.py
tests/: conftest.py  test_BamFile.py  test_BigBed _remote.py  test_BigBed.py  test_BigBed_remote.py  test_BigBed_s3.py  test_BigWig.py  test_BigWig_remote.py  test_BigWig_s3.py  test_GWASBigBedPIP.py  test_GWASBigBedPval.py  test_GtfParsedFile.py  test_ReadingsBamFile.py  test_S3HDF5File.py  test_SplicingBamFile.py  test_TranscriptTbxFile.py  test_simplified_bin_rows.py  test_skeleton.py
